<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calibrate.CalibrateScaleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@+id/cal_scale_rg_unit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/cal_scale_rg_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <RadioButton
                android:id="@+id/cal_scale_rb_unit_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cal_scale_unit1" />

            <RadioButton
                android:id="@+id/cal_scales_rb_unit_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cal_scale_unit2" />

            <RadioButton
                android:id="@+id/cal_scales_rb_unit_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cal_scale_unit3" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cal_scale_rg_unit" />

        <RadioGroup
            android:id="@+id/cal_scale_rg_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

            <RadioButton
                android:id="@+id/cal_scale_rb_scale1000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cal_scale_scale1000" />

            <RadioButton
                android:id="@+id/cal_scales_rb_scale5000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cal_scale_scale5000" />

            <RadioButton
                android:id="@+id/cal_scales_rb_scale10000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cal_scale_scale10000" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cal_scale_rg_scale" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="TextView"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:layout_editor_absoluteX="169dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>